06-01 게시판 2차 수정

--- a/WebContent/CSS/comment.css
+++ b/WebContent/CSS/comment.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+*
+{font-family: 'Suisse Regular', sans-serif;}
+
 #content{
     width: 62%;
     padding: 20px 40px 20px 10px;
