--- a/WebContent/CSS/board.css
+++ b/WebContent/CSS/board.css
@@ -167,7 +167,12 @@
   #text_title{
     font-weight: bolder;
     font-size: 13px;
-
+  	width        : 120px;     /* 너비는 변경될수 있습니다. */
+  text-overflow: ellipsis;  /* 위에 설정한 100px 보다 길면 말줄임표처럼 표시합니다. */
+  white-space  : nowrap;    /* 줄바꿈을 하지 않습니다. */
+  overflow     : hidden;    /* 내용이 길면 감춤니다 */
+  display      : inline-block;     /* ie6이상 현재요소를 블럭처리합니다. */
+	float: right;
   }
 
   #nick_name{
