--- a/WebContent/CSS/view.css
+++ b/WebContent/CSS/view.css
@@ -17,8 +17,7 @@
 
 hr
 {
-    margin-top: 0;
-    margin-bottom: 20px;
+    margin: 0;
     border: 0;
     height: 2px;
     background-color: #808080;
@@ -96,6 +95,7 @@ button:hover
 
 .panel-subject
 {
+    padding-top: 10px;
     padding-bottom: 5px;
     border-bottom: 2px solid #808080;
     width: 90%;
@@ -178,4 +178,47 @@ button:hover
 {font-size: 14px;}
 
 .btn-recommend:hover
+{cursor: pointer;}
+
+.comment-list
+{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.panel-comment-write
+{
+    padding: 20px 0;
+    margin-bottom: 10px;
+}
+
+textarea[name="comment_content"]
+{
+    float: left;
+    padding: 5px;
+    width: 80%;
+    height: 70px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    resize: none;
+}
+
+.btn-comment-write
+{
+    clear: both;
+    width: 20%;
+    height: 70px;
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #333;
+    color: #fff;
+}
+
+#delete-comment
+{float: right;}
+
+#delete-comment:hover
 {cursor: pointer;}
