--- a/WebContent/CSS/postView.css
+++ b/WebContent/CSS/postView.css
@@ -50,7 +50,7 @@ button:hover
 .wrap * 
 {box-sizing: border-box;}
 
-.writer-img
+.pst_writer-img
 {
     display: inline-block;
     margin-right: 10px;
@@ -62,7 +62,7 @@ button:hover
     overflow: hidden;
 }
 
-.writer-img img
+.pst_writer-img img
 {
     display: block;
     width: 100%;
@@ -81,7 +81,7 @@ button:hover
 .panel-post-info span
 {font-size: 14px;}
 
-.writer-name
+.pst_writer-name
 {font-weight: bold;}
 
 .panel-p
@@ -108,7 +108,7 @@ button:hover
     font-weight: bold;
 }
 
-.btn-scrap:hover
+#btn-scrap:hover
 {cursor: pointer;}
 
 #btn-toggle-menu
@@ -168,17 +168,17 @@ button:hover
     text-align: center;
 }
 
-.btn-recommend
+#btn-recommend
 {
     background-color: #333;
     color: #fff;
     font-weight: bold;
 }
 
-.btn-recommend > i
+#btn-recommend > i
 {font-size: 14px;}
 
-.btn-recommend:hover
+#btn-recommend:hover
 {cursor: pointer;}
 
 .panel-comment-write
