--- a/WebContent/CSS/footer.css
+++ b/WebContent/CSS/footer.css
@@ -1,4 +1,6 @@
-@charset * {
+@charset 
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -14,6 +16,8 @@ footer {
     justify-content: space-around;
     align-items: center;
 }
+
+
 .ft_link ul {
     list-style: none;
 }
@@ -50,41 +54,20 @@ footer {
     display: flex;
     justify-content: space-around;
 }
-@media screen and (max-width: 768px) {
-.ft_link ul {
-    list-style: none;
+p.call {
+    margin-top: 16px;
 }
-.snsicon {
-    display: flex;
-    padding: 0 25%;
-    justify-content: space-around;
+.logo p {
+    margin-bottom: 0px;
 }
-.snsicon {
-    text-align: center;
+.syslogo{
+    width: 40px;
+    height: 40px;
+    margin-bottom:7px ;
 }
-
-.logo {
-    text-align: center;
+p.callnumber {
+    margin-bottom: 5px;
 }
-
-.tel {
-    font-size: 1rem;
-}
-
-.teltime {
-    font-size: 0.4rem;
-}
-.ft_info {
-    display: flex;
-    padding: 0 25%;
-    justify-content: space-around;
-}
-.ft_info a {
-    text-decoration: none;
-    color: #333333;
-}
-.ft_addr1, .ft_addr2, .ft_addr3 {
-    display: flex;
-    justify-content: space-around;
-}
+.about p {
+    margin-top: 16px;
 }
