--- a/WebContent/CSS/index.css
+++ b/WebContent/CSS/index.css
@@ -1,118 +1,81 @@
+@import url(//db.onlinewebfonts.com/c/0033a2fbc0329740fb86c1cfd134cb94?family=Roboto);
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  body {
-    font-family: sans-serif;
-  }
-  
-  nav {
-    height: 10vh;
-    background: #333333;
-  }
-  
-  .nav-links {
-    display: flex;
-    list-style: none;
-    width: 50%;
-    height: 100%;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: auto;
-  }
-  
-  .nav-links li a {
-    color: white;
-    text-decoration: none;
-    font-size: 16px;
-  }
-  
-  .landing {
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .landing h2 {
-    margin: 100px;
-    font-size: 50px;
-    color: #ae5fce;
-  }
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+    /* background-image:url("../image/");
+    background-size: cover; */
+}
 
-  
-  
-  @media screen and (max-width: 768px) {
-    .line {
-      width: 30px;
-      height: 3px;
-      background: white;
-      margin: 5px;
-    }
-    nav {
-      position: relative;
-    }
-  
-    .hamburger {
-      position: absolute;
-      cursor: pointer;
-      right: 5%;
-      top: 50%;
-      transform: translate(-5%, -50%);
-      z-index: 2;
-    }
-  
-    .nav-links {
-      position: fixed;
-      background: #FFD996;
-      height: 100vh;
-      width: 100%;
-      flex-direction: column;
-      clip-path: circle(10px at 90% -10%);
-      -webkit-clip-path: circle(10px at 90% -10%);
-      transition: all 1s ease-out;
-      pointer-events: none;
-    }
-    .nav-links.open {
-      clip-path: circle(11000px at 90% -10%);
-      -webkit-clip-path: circle(1100px at 90% -10%);
-      pointer-events: all;
-    }
-    .landing {
-      flex-direction: column;
-    }
+body {
+    height: 100vh;
+    background-image: url("../image/bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 
-    .nav-links li {
-      opacity: 0;
-    }
-    .nav-links li a {
-      font-size: 25px;
-    }
-    .nav-links li:nth-child(1) {
-      transition: all 0.5s ease 0.2s;
-    }
-    .nav-links li:nth-child(2) {
-      transition: all 0.5s ease 0.4s;
-    }
-    .nav-links li:nth-child(3) {
-      transition: all 0.5s ease 0.6s;
-    }
-    .nav-links li:nth-child(4) {
-      transition: all 0.5s ease 0.8s;
-    }
-    .nav-links li:nth-child(5) {
-      transition: all 0.5s ease 1.0s;
-    }
-    .nav-links li:nth-child(6) {
-      transition: all 0.5s ease 1.2s;
-    }
-   .nav-links li.fade {
-      opacity: 1;
-    }
-    .nav-links li a:hover {
-        color : #333333;
-        transition: all 0.5s;
-    }
-  }
+.nav-item a {
+    color: #808080;
+}
 
+h1 {
+    text-align: center;
+    margin-top: 117px;
+    font-size: 6.5rem;
+    font-weight: 900;
+    color: rgb(236, 236, 236);
+}
+
+h1 span:nth-child(2) {
+    font-size: 4.5rem;
+}
+
+h1 span:nth-child(3) {
+    font-size: 4.5rem;
+}
+
+h1 span:nth-child(4) {
+    font-size: 4.5rem;
+}
+
+h1 span:nth-child(5) {
+    font-size: 4.5rem;
+}
+
+h1 span:nth-child(6) {
+    font-size: 4.5rem;
+}
+
+.text span:nth-child(2) {
+    color: rgb(39, 39, 192);
+}
+
+.nav {
+    margin-top: 2%;
+    margin-right: 3%;
+}
+
+.nav button {
+    font-size: 0.7rem;
+}
+
+.nav li {
+    font-size: 0.75rem;
+}
+
+.nav li:hover {
+    text-decoration: underline;
+}
+
+p.text {
+    margin: 30px;
+    text-align: center;
+    font-weight: 700;
+    color: rgb(236, 236, 236);
+}
+
+article {
+    padding: 0 5% 5% 0;
+}
