--- a/WebContent/CSS/log.css
+++ b/WebContent/CSS/log.css
@@ -5,6 +5,7 @@
   }
   
   body {
+    position: relative;
     font-family: sans-serif;
     background: #ffe082;
     display: flex;
@@ -12,7 +13,13 @@
     justify-content: center;
     min-height: 100vh;
   }
-  
+  .yet {
+    position: absolute;
+    margin-top: 300px;
+  }
+  .yet h3{
+    margin-bottom: 10px;
+  }
   .form {
     height: 350px;
     width: 250px;
@@ -64,7 +71,7 @@
       6px 6px 25px 0 rgba(0, 0, 0, 0.1);
   }
   
-  .btn {
+  .btn-login {
     border: none;
     padding: 15px;
     min-width: 150px;
@@ -76,8 +83,22 @@
       6px 6px 25px 0 rgba(0, 0, 0, 0.1);
     transition: 0.4s;
   }
+  .btn-yet {
+    border: none;
+    padding: 15px;
+    min-width: 150px;
+    border-radius: 15px;
+    background: #333;
+    font-weight: bold;
+    color: #fff;
+    box-shadow: -6px -6px 25px 0 #ffe082be,
+      6px 6px 25px 0 rgba(0, 0, 0, 0.1);
+    transition: 0.4s;
+  }
+
   
-  .btn:hover {
+  .btn-login:hover,
+  .btn-yet:hover {
     min-width: 180px;
     cursor: pointer;
   }
