로그인창 반응형

--- a/WebContent/CSS/login.css
+++ b/WebContent/CSS/login.css
@@ -50,6 +50,7 @@ body {
         padding-top: 20px;
         padding-left: 30px;
         color: #333333;
+        margin: 0px auto;
     }
 
     /* "시스아웃입니다" 텍스트 */
