--- a/WebContent/CSS/siteBoard.css
+++ b/WebContent/CSS/siteBoard.css
@@ -4,9 +4,10 @@
 	width: 20%;
 	margin:10px 2%;
 	background-color: white;
-	height: 200px;
+	height: 100px;
 	display: inline-block;
 	border-radius: 8px;
+	
 }
 
 .subject{
@@ -16,9 +17,10 @@
 }
 
 .card{
-	width: 100%;
+	width: 20%;
+	margin:10px 2%;
 	display: inline-block;
-	border: 1px solid #B3B3B3;
+	padding: 10px 20px;
 	background-color: white;
 	border-bottom-left-radius: 8px;
 	border-bottom-right-radius: 8px;
@@ -53,4 +55,12 @@
 	color: white;
 	outline: none;
 	border: none;
+}
+
+.site_btn:hover{
+	opacity: 0.7;
+}
+
+.site_btn:active{
+	opacity: 0.4;
 }
