--- a/WebContent/CSS/notice_content.css
+++ b/WebContent/CSS/notice_content.css
@@ -4,11 +4,11 @@
 {font-family: 'Suisse Regular', sans-serif;}
 
 #content{
-    background-color: #DEDEDE;
+    background-color: #fafafa;
     width: 84%;
     margin: 30px auto;
     padding: 20px 10px;
-    
+    border-top: 1px solid #DEDEDE;
 }
 
 #notice_title{
