공지사항 수정 /폰트 다운

--- a/WebContent/CSS/notice_content.css
+++ b/WebContent/CSS/notice_content.css
@@ -1,7 +1,12 @@
 @charset "utf-8";
 
+@font-face {
+    font-family: yun;
+    src: url(font/윤고딕310.ttf);
+  }
+
 *
-{font-family: 'Suisse Regular', sans-serif;}
+{font-family: yun;}
 
 #content{
     background-color: #fafafa;
@@ -33,4 +38,8 @@
     font-size: 16px;
     border-radius: 7px;
     margin-bottom: 30px;
+}
+
+button:hover{
+    cursor: pointer;
 }
