--- a/WebContent/CSS/login2.css
+++ b/WebContent/CSS/login2.css
@@ -13,11 +13,11 @@
     justify-content: center;
     min-height: 100vh;
   }
-  .yet {
+  .section_02 {
     position: absolute;
     margin-top: 300px;
   }
-  .yet h3{
+  .section_02 h3{
     margin-bottom: 10px;
   }
   .form {
