--- a/WebContent/CSS/login.css
+++ b/WebContent/CSS/login.css
@@ -35,7 +35,7 @@
   }
   
   .form:hover {
-    transform: scale(1.3);
+    transform: scale(1.5);
   }
   .form input {
     margin: 12px 20px;
@@ -82,9 +82,8 @@
     box-shadow: -6px -6px 25px 0 #ffe082be,
       6px 6px 25px 0 rgba(0, 0, 0, 0.1);
     transition: 0.4s;
-    margin-bottom: 0px;
   }
-   .btn-join {
+  .btn-yet {
     border: none;
     padding: 15px;
     min-width: 150px;
@@ -95,32 +94,21 @@
     box-shadow: -6px -6px 25px 0 #ffe082be,
       6px 6px 25px 0 rgba(0, 0, 0, 0.1);
     transition: 0.4s;
-  } 
-  .btn-login:hover {
+  }
+  .btn-login:hover,
+  .btn-yet:hover {
     min-width: 180px;
     cursor: pointer;
   }
-  input#btn_login.btn-login{
-  margin-bottom: 0;
-  }
-  .btn-join:hover {
-    min-width: 200px;
-    cursor: pointer;
-  }
-  .yet{
-  display:block;
-  font-size: 1.17em;
-  font-weight: bold;
+  .check_save{
+    margin-right: 70px;
   }
   #saveEmail{
-  margin:12px 2px 12px 0;
+    margin: 12px 2px 12px 0;
   }
-  a.saveEmail{
-  font-size:0.7em;
-  }
-  #btn_login{
-  margin-bottom: 0
+  a.saveEmail {
+    font-size: 0.7em;
   }
   h3.yet {
-  font-size:0.7em;
+  font-size:0.9em;
   }
