--- a/WebContent/CSS/site.css
+++ b/WebContent/CSS/site.css
@@ -158,7 +158,7 @@
     .container .card .face.face1 .content h3{
         margin: 10px 0 0 ;
         padding: 0;
-        color: #fff;
+        color: #white;
         text-align: center;
         font-size: 0.8em;
     }
