--- a/WebContent/CSS/siteBoard.css
+++ b/WebContent/CSS/siteBoard.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+
+
 .post{
 	width: 20%;
 	margin:10px 2%;
@@ -18,14 +20,13 @@
 
 .card{
 	width: 20%;
-	margin:10px 2%;
+	margin:10px 1%;
 	display: inline-block;
 	padding: 10px 20px;
 	background-color: white;
 	border-bottom-left-radius: 8px;
 	border-bottom-right-radius: 8px;
-	z-index: 1;
-	position: relative;
+	border: 1px soild black;
 }
 
 .card2{
@@ -56,19 +57,25 @@
 }
 
 .card_text{
-	font-size: 13px;
+	font-size: 14px;
 	padding: 6px 5px;
 	display: inline-block;
+	font-weight: bold;
+	border-top: 1px soild black;
 }
 
 .site_btn{
+	font-size: 12px;
+	padding: 5px;
 	margin: 6px 5px;
 	display: inline-block;
 	border-radius: 3px;
-	background-color: #007bff;
+	background-color: #333;
 	color: white;
 	outline: none;
 	border: none;
+	width: 100%;
+	cursor: pointer;
 }
 
 .site_btn:hover{
