--- a/WebContent/CSS/mypage.css
+++ b/WebContent/CSS/mypage.css
@@ -9,7 +9,14 @@ body{
     font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
     font-size: 10px;
 }
-
+.name,
+p.job-title{
+	font-family: 'Playfair Display', serif;
+	text-align: center;
+}
+h2{
+	font-size : 1rem;
+}
 a{
     text-decoration: none;
     color : #fff;
@@ -17,23 +24,23 @@ a{
 
 section{
     padding: 10rem 0;
-    background-color: #fff;
+    background-color: #ffd669;
 }
 .heading{
-    text-transform: uppercase;
+     text-transform: uppercase;
     font-size: 3.5rem;
     letter-spacing: 3px;
     margin-right: -3px;
     margin-bottom: 5rem;
     text-align: center;
-    color: #333;
+    /* color: #333;  */
     position: relative;
 }
 .heading::after {
     content: "";
     width: 10rem;
     height: .8rem;
-    background-color: #ffd669;
+  /*   background-color: #808080; */
     position: absolute;
     bottom: -2rem;
     left: 50%;
@@ -48,18 +55,18 @@ section{
     flex-direction: column;
 }
 .card {
-    width: 32rem;
+    width: 35rem;
     background-color: #ebeef8;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 2rem 0;
-    box-shadow: .5rem .5rem 3rem rgba(0, 0, 0, 2);
+   /*  box-shadow: .5rem .5rem 3rem rgba(0, 0, 0, 2); */
 }
 .card .card-img{
     width: 100%;
-    height: 26rem;
+    height: 20rem;
     object-fit: cover;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 78%, 0% 100%)
     clip-path: polygon(0 0, 100% 0, 100% 78%, 0% 100%);
@@ -138,3 +145,20 @@ section{
 .fa-instagram:hover {
     color: #ffd669;
 }
+input#mypage_subject {
+	width: 450px;
+	height: 50px;
+	border: none;
+	background-color : white;
+	border-radius : 5px
+}
+textarea#mypage_content {
+	width: 450px;
+	border: none;
+	background-color : white;
+	border-radius : 5px
+}
+
+
+
+
