--- a/WebContent/CSS/userRank.css
+++ b/WebContent/CSS/userRank.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
-*
-{font-family: 'Suisse Regular', sans-serif;}
-
+*{
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
 .header 
 {
     border-bottom: 2px solid #808080;
