--- a/WebContent/CSS/FindEmail.css
+++ b/WebContent/CSS/FindEmail.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
 body{
     box-sizing: border-box;
     font-family: 'Suisse Regular', sans-serif;
