--- a/WebContent/CSS/board.css
+++ b/WebContent/CSS/board.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
-*
-{font-family: 'Suisse Regular', sans-serif;}
+*{
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
 
 #tag{
     width: 85%;
