--- a/WebContent/CSS/loading.css
+++ b/WebContent/CSS/loading.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
 }
 body{
     width: 100%;
