--- a/WebContent/CSS/notice_content.css
+++ b/WebContent/CSS/notice_content.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
 }
-body {
+.body {
     margin: 0 20%;
 }
 h1.header{
@@ -22,7 +22,7 @@ h1 {
     margin: 30px auto;
     padding: 20px 10px;
     border-top: 1px solid #DEDEDE;
-    width:100%;
+    
     height: 300px;
 }
 
@@ -51,6 +51,11 @@ h1 {
     border-radius: 1px;
     padding: 2px 10px 2px 10px;
     border: 1px solid #333;
+    transition: 0.5s
+}
+#back_btn:hover{
+	background:#333;
+	color:#fff;
 }
 
 
