--- a/WebContent/CSS/postView.css
+++ b/WebContent/CSS/postView.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
-
-*
-{font-family: 'Suisse Regular', sans-serif;}
-
+*{
+  
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
 .left-pull
 {float: left;}
 
