--- a/WebContent/CSS/ranker-card.css
+++ b/WebContent/CSS/ranker-card.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
+
 .panel-ranker-info
 {
     margin: 40px 0;
