--- a/WebContent/CSS/site.css
+++ b/WebContent/CSS/site.css
@@ -7,6 +7,12 @@
     align-items: center;
     font-family: consolas;
 } */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
 .container{
     width: 1000px;
     position: relative;
