--- a/WebContent/CSS/sub.css
+++ b/WebContent/CSS/sub.css
@@ -1,5 +1,10 @@
 @charset
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
 .notice-rank{
     display: flex;
 }
