--- a/WebContent/CSS/update.css
+++ b/WebContent/CSS/update.css
@@ -1,6 +1,7 @@
-*
-{font-family: 'Suisse Regular', sans-serif;}
-
+*{
+    
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
 .left-pull
 {float: left;}
 
