--- a/WebContent/CSS/userEmailRegister.css
+++ b/WebContent/CSS/userEmailRegister.css
@@ -1,9 +1,9 @@
-* {
-    padding: 0;
+*{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-  }
-  
+    font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+}
   body {
     position: relative;
     font-family: sans-serif;
